# mlcc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
backends/: CMakeLists.txt
backends/cmake/: AddDialect.cmake  AddRuntime.cmake
backends/hpc/: config.cmake
backends/hpc/lib/: Ops.td  Passes.hpp  Runtime.hpp
backends/hpc/lib/Transforms/: Lower2LLVM.cpp
backends/hpc/opt/: hpc-opt.cpp
cmake/: BuildSummaries.cmake  CompilerSetup.cmake  Dependencies.cmake  HPCConfig.cmake  Helpers.cmake  LLVMSetup.cmake  LibraryTarget.cmake  Platforms.cmake  SourceCollections.cmake  config.cmake
include/: mlcc.hh
lib/: mlcc.cpp
src/: CMakeLists.txt  mlc.cc  mlcc-opt.cpp  mlcc.cc  mlcc.cpp
src/cmake/: AddDialect.cmake
src/hpc/: CMakeLists.txt  Dialect.hpp  Ops.td  Passes.hpp  Passes.td  Runtime.hpp  config.cmake
src/hpc/IR/: Dialect.cpp  Verifiers.cpp
src/hpc/Runtime/: Runtime.cpp
src/hpc/Transforms/: Lower2LLVM.cpp
src/hpc/compiler/: CMakeLists.txt  mlcc++.cpp
src/hpc/lib/: Ops.td  Passes.hpp  Runtime.hpp
src/hpc/lib/Runtime/: Runtime.cpp
src/hpc/lib/Transforms/: Lower2LLVM.cpp  LowerDot2LLVM.cpp
src/hpc/opt/: CMakeLists.txt  mlcc-opt.cpp
tools/: CMakeLists.txt
